WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195751
REGRESSION (
r242908
): TestWebKitAPI.WebKit.AddAndRemoveDataDetectors Crashed
https://bugs.webkit.org/show_bug.cgi?id=195751
Summary
REGRESSION (r242908): TestWebKitAPI.WebKit.AddAndRemoveDataDetectors Crashed
Timothy Hatcher
Reported
2019-03-14 11:27:41 PDT
ASSERTION FAILED: allowedClasses && allowedClasses.count /Volumes/Data/slave/ios-simulator-12-debug/build/Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm(321) : Optional<RetainPtr<id> > IPC::decodeSecureCodingInternal(IPC::Decoder &, NSArray<Class> *) 1 0x10addb779 WTFCrash 2 0x10fc9634b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x11016ff4d IPC::decodeSecureCodingInternal(IPC::Decoder&, NSArray<objc_class*>*) 4 0x11016f4e3 IPC::decodeObject(IPC::Decoder&, NSArray<objc_class*>*) 5 0x11016f701 IPC::decodeArrayInternal(IPC::Decoder&) 6 0x11016f497 IPC::decodeObject(IPC::Decoder&, NSArray<objc_class*>*) 7 0x110171186 WTF::Optional<WTF::RetainPtr<NSArray> > IPC::decode<NSArray, NSArray*>(IPC::Decoder&, NSArray<objc_class*>*) 8 0x11017100b WebKit::DataDetectionResult::decode(IPC::Decoder&) 9 0x110e0460c WTF::Optional<WebKit::DataDetectionResult> IPC::ArgumentCoder<WebKit::DataDetectionResult>::decode<WebKit::DataDetectionResult, (void*)0>(IPC::Decoder&) 10 0x110de2984 IPC::Decoder& IPC::Decoder::operator>><WebKit::DataDetectionResult, (void*)0>(WTF::Optional<WebKit::DataDetectionResult>&) 11 0x110de2889 Messages::WebPage::DetectDataInAllFrames::callReply(IPC::Decoder&, WTF::CompletionHandler<void (WebKit::DataDetectionResult&&)>&&) 12 0x11056b581 void IPC::Connection::sendWithAsyncReply<Messages::WebPage::DetectDataInAllFrames, WebKit::DataDetectionResult const&>(Messages::WebPage::DetectDataInAllFrames&&, WTF::CompletionHandler<void (WebKit::DataDetectionResult const&)>&&, unsigned long long)::'lambda'(IPC::Decoder*)::operator()(IPC::Decoder*) 13 0x11056b492 WTF::Function<void (IPC::Decoder*)>::CallableWrapper<void IPC::Connection::sendWithAsyncReply<Messages::WebPage::DetectDataInAllFrames, WebKit::DataDetectionResult const&>(Messages::WebPage::DetectDataInAllFrames&&, WTF::CompletionHandler<void (WebKit::DataDetectionResult const&)>&&, unsigned long long)::'lambda'(IPC::Decoder*)>::call(IPC::Decoder*) 14 0x10fceecde WTF::Function<void (IPC::Decoder*)>::operator()(IPC::Decoder*) const 15 0x10fcd2253 WTF::CompletionHandler<void (IPC::Decoder*)>::operator()(IPC::Decoder*) 16 0x10fcde3e1 IPC::Connection::dispatchMessage(IPC::Decoder&) 17 0x10fcd0a01 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 18 0x10fcdb931 IPC::Connection::dispatchIncomingMessages() 19 0x10fcffe62 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14::operator()() 20 0x10fcffd89 WTF::Function<void ()>::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_14>::call() 21 0x10ae05c1d WTF::Function<void ()>::operator()() const 22 0x10ae65393 WTF::RunLoop::performWork() 23 0x10ae65d24 WTF::RunLoop::performWork(void*)
Attachments
Patch
(3.50 KB, patch)
2019-03-14 11:35 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-03-14 11:35:56 PDT
Created
attachment 364668
[details]
Patch
WebKit Commit Bot
Comment 2
2019-03-14 12:22:12 PDT
Comment on
attachment 364668
[details]
Patch Clearing flags on attachment: 364668 Committed
r242953
: <
https://trac.webkit.org/changeset/242953
>
WebKit Commit Bot
Comment 3
2019-03-14 12:22:13 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-03-14 12:23:19 PDT
<
rdar://problem/48896640
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug