REGRESSION (r242908): TestWebKitAPI.WebKit.AddAndRemoveDataDetectors Crashed https://bugs.webkit.org/show_bug.cgi?id=195751

Reviewed by Wenson Hsieh.

* Shared/Cocoa/ArgumentCodersCocoa.mm:
(IPC::decodeArrayInternal): Added allowedClasses, pass to internal decodeObject for values.
(IPC::decodeDictionaryInternal): Ditto for keys and values.
(IPC::decodeObject): Pass allowedClasses to array and dictionary decoders.


Canonical link: https://commits.webkit.org/210043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242953 268f45cc-cd09-0410-ab3c-d52691b4dbfc